--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,148 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
+    <form method="post" action="https://mate-academy-form-lesson.herokuapp.com/create-application">
+      <fieldset class="inputs-block">
+        <legend>Personal information</legend>
+        <label class="input-row">
+          Surname:
+          <input
+            type="text"
+            name="surName"
+            autocomplete="off"
+            required
+          >
+        </label>
+        <label class="input-row">
+          Name:
+          <input 
+            type="text"
+            name="name"
+            autocomplete="off"
+            required
+          >
+        </label>
+        <label class="input-row">
+          How old are You?
+          <input 
+            type="number"
+            name="age"
+            value="12"
+            min="1"
+            max="100"
+          >
+        </label>
+        <label class="input-row">
+          Full date of birth:
+          <input type="date" name="date">
+        </label>
+        <label class="input-row">
+          I accept the term of the agreement
+          <input type="checkbox" name="agreement">
+        </label>
+      </fieldset>
+      <fieldset class="inputs-block">
+        <legend>Registration</legend>
+        <label class="input-row">
+          E-mail:
+          <input 
+            type="email"
+            name="email"
+            data-qa="field-placeholder"
+            placeholder="email@example.com"
+          >
+        </label>
+        <label class="input-row">
+          Password:
+          <input 
+            type="password"
+            name="Password"
+            minlength="1"
+            maxlength="30"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="inputs-block">
+        <legend>An interesting fact about you!</legend>
+        <div class="input-row">
+          Do you love cats?
+          <label>
+            <input type="radio"
+              name="cats"
+              value="yes"
+            >
+            Yes
+          </label>
+          <label>
+            <input type="radio"
+              name="cats"
+              value="no"
+            >
+            No
+          </label>
+        </div>
+        <label class="input-row">
+          What is your favorite color?
+          <input
+            type="color"
+            name="Color"
+          >
+        </label>
+        <label class="input-row">
+          What time do you go to bed?
+          <input 
+            type="time"
+            name="time"
+            step="1"
+          >
+        </label>
+        <label class="input-row">
+          What are your favorite brand of cars?
+          <select
+            name="favoriteCar"
+            autocomplete="off"
+            multiple
+            class="favCar"
+          >
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+          </select>
+        </label>
+        <label class="input-row">
+          How do you rate our work?
+          <input 
+            type="range"
+            name="rate"
+            min="0"
+            max="5"
+            required
+            value="0"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="inputs-block">
+        <legend>Additional info</legend>
+        <label class="input-row">
+          Comments:
+          <textarea
+            name="comments"
+            autocomplete="off"
+          >
+          </textarea>
+        </label>
+        <label class="input-row">
+          Would you recommend us?
+          <select
+            name="reccommends"
+          >
+            <option value="yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit">Submit</button>
+      <script type="text/javascript" src="./main.js"></script>
+    </form>
   </body>
 </html>
